--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Nikhita V Kencharadder
-logo: /assets/Display Pic.jpg
+logo: /assets/Headshot.jpg
 description: Business Analyst / Data Analyst
 #show_downloads: true
 theme: jekyll-theme-minimal
