--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 title: Nikhita V Kencharadder
 logo: /assets/Headshot.jpg
 description: Business Analyst / Data Analyst
-#show_downloads: true
+<div id="badges">
+  <a href="www.linkedin.com/in/nikhitavk">
+    <img src="https://img.shields.io/badge/LinkedIn-blue?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn Badge"/>
 theme: jekyll-theme-minimal
